--- a/index.html
+++ b/index.html
@@ -342,31 +342,27 @@
       font-size: 0.8rem;
     }
 
-    /* Remove html5-qrcode overlays */
+    /* Remove html5-qrcode overlays completely */
     .qr-shaded-region { 
-      box-shadow: none !important; 
-      background: transparent !important; 
-      border: none !important;
-      opacity: 0 !important;
       display: none !important;
+      visibility: hidden !important;
     }
     
     #qr-reader__scan_region { 
-      background: transparent !important; 
-      border: none !important;
-      box-shadow: none !important;
-      opacity: 0 !important;
       display: none !important;
+      visibility: hidden !important;
     }
     
     #qr-reader div[style*="border"] {
-      border: none !important;
-      background: transparent !important;
-      box-shadow: none !important;
+      display: none !important;
+      visibility: hidden !important;
     }
 
-    /* Ensure video fills container properly on iOS */
+    /* Force video visibility on iOS */
     #qr-reader video, #qr-reader canvas { 
+      display: block !important;
+      visibility: visible !important;
+      opacity: 1 !important;
       width: 100% !important;
       height: 100% !important;
       object-fit: cover !important;
@@ -375,6 +371,24 @@
       transform: translateZ(0) !important;
       backface-visibility: hidden !important;
       -webkit-backface-visibility: hidden !important;
+      position: absolute !important;
+      top: 0 !important;
+      left: 0 !important;
+      z-index: 1 !important;
+    }
+
+    /* Ensure the QR reader container is properly set up */
+    #qr-reader {
+      position: relative !important;
+      overflow: hidden !important;
+      background: #000 !important;
+    }
+
+    /* iOS Safari specific fixes */
+    @supports (-webkit-touch-callout: none) {
+      #qr-reader video {
+        -webkit-playsinline: true !important;
+      }
     }
 
     /* Modal styles */
