--- a/index.html
+++ b/index.html
@@ -375,6 +375,10 @@
       top: 0 !important;
       left: 0 !important;
       z-index: 1 !important;
+      /* Prevent flipping/rotation issues on iOS */
+      -webkit-transform-style: flat !important;
+      transform-style: flat !important;
+      will-change: auto !important;
     }
 
     /* Ensure the QR reader container is properly set up */
@@ -382,12 +386,26 @@
       position: relative !important;
       overflow: hidden !important;
       background: #000 !important;
+      /* Prevent container transforms that might cause flipping */
+      -webkit-transform: none !important;
+      transform: none !important;
     }
 
     /* iOS Safari specific fixes */
     @supports (-webkit-touch-callout: none) {
       #qr-reader video {
         -webkit-playsinline: true !important;
+        /* Prevent any transform animations */
+        -webkit-animation: none !important;
+        animation: none !important;
+        -webkit-transition: none !important;
+        transition: none !important;
+      }
+      
+      /* Ensure no flipping transforms are applied */
+      #qr-reader * {
+        -webkit-transform: none !important;
+        transform: none !important;
       }
     }
 
