Enhance camera performance and visibility in QR Hunt app with optimizations for iOS, including improved video handling and fallback mechanisms for camera selection.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,34 @@
       user-select: none;
       -webkit-touch-callout: none;
       -webkit-tap-highlight-color: transparent;
+      /* Performance optimizations */
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      will-change: auto;
+      contain: layout style;
     }
 
-    /* Fullscreen camera container */
+    /* Force video elements to behave properly */
+    #qr-reader video {
+      transform: none !important;
+      -webkit-transform: none !important;
+      will-change: auto !important; /* Disable GPU acceleration that can cause flipping */
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+    
+    #qr-reader canvas {
+      transform: none !important;
+      -webkit-transform: none !important;
+      will-change: auto !important;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
+    
+    /* Optimize rendering performance */
     .camera-container {
       position: fixed;
       top: 0;
@@ -32,6 +57,8 @@
       height: 100dvh;
       z-index: 1;
       background: #000;
+      will-change: auto; /* Reduce GPU usage */
+      contain: strict; /* Optimize rendering */
     }
 
     #qr-reader {
