--- a/index.html
+++ b/index.html
@@ -385,26 +385,20 @@
       visibility: hidden !important;
     }
 
-    /* Force video visibility on iOS */
+    /* Force video visibility on iOS (lightweight rules) */
     #qr-reader video, #qr-reader canvas { 
       display: block !important;
       visibility: visible !important;
       opacity: 1 !important;
+      position: absolute !important;
+      inset: 0 !important;
       width: 100% !important;
       height: 100% !important;
       object-fit: cover !important;
-      filter: brightness(1.1) contrast(1.05) saturate(1.1) !important;
-      -webkit-transform: translateZ(0) !important;
-      transform: translateZ(0) !important;
+      -webkit-transform: none !important;
+      transform: none !important;
       backface-visibility: hidden !important;
       -webkit-backface-visibility: hidden !important;
-      position: absolute !important;
-      top: 0 !important;
-      left: 0 !important;
-      z-index: 1 !important;
-      /* Prevent flipping/rotation issues on iOS */
-      -webkit-transform-style: flat !important;
-      transform-style: flat !important;
       will-change: auto !important;
     }
 
@@ -623,8 +617,8 @@
     .flash-animate { animation: flashPulse 600ms ease-out; }
     @keyframes flashPulse { 0% { opacity: 0; transform: scale(1.1); filter: blur(1px);} 25% { opacity: 1; transform: scale(1.0); filter: none;} 100% { opacity: 0; transform: scale(1.0);} }
 
-    /* Keep webcam bright (some libs dim the feed on detection) */
-    #qr-reader video, #qr-reader canvas { filter: brightness(1.08) contrast(1.05) saturate(1.06) !important; }
+  /* Avoid extra filters that add GPU cost on iPhone */
+  #qr-reader video, #qr-reader canvas { filter: none !important; }
   /* Remove shaded overlay from html5-qrcode */
   .qr-shaded-region { 
     box-shadow: none !important; 
