Implement camera-only preview functionality by adding camera_preview.js and main_preview.js

--- a/index2.html
+++ b/index2.html
@@ -135,12 +135,8 @@
     </div>
   </div>
 
-  <!-- libs -->
-  <script src="./html5-qrcode.min.js"></script>
-
-  <!-- app modules (no Three.js) -->
-  <script type="module" src="./js/data.js"></script>
-  <script type="module" src="./js/camera.js"></script>
-  <script type="module" src="./js/main_light.js"></script>
+  <!-- camera-only preview (no QR detection) -->
+  <script type="module" src="./js/camera_preview.js"></script>
+  <script type="module" src="./js/main_preview.js"></script>
 </body>
 </html>
