Enhance QR camera functionality: add resume button for manual control, implement auto-resume after long pause, and improve error handling during resume attempts

--- a/index.html
+++ b/index.html
@@ -437,6 +437,9 @@
       <div id="camera-status">
         <div>📷 Camera Initializing...</div>
         <small style="opacity:0.7; margin-top:8px;">Please allow camera access</small>
+        <button id="resume-camera-btn" style="display:none; margin-top:10px; padding:8px 16px; background:#2d8cff; color:white; border:none; border-radius:6px; font-size:0.8rem; cursor:pointer;">
+          🔄 Resume Scanning
+        </button>
       </div>
     </div>
     <div class="qr-overlay" aria-hidden="true">
