feat: Implement piece management system and add Pediatrics component

--- a/index.html
+++ b/index.html
@@ -638,6 +638,8 @@
 
   <!-- html5-qrcode local -->
   <script src="./html5-qrcode.min.js"></script>
+  <script src="./js/pieces.js"></script>
+  <script src="./js/pieces/pediatrics.js"></script>
   
   <script type="module" src="./js/data.js"></script>
   <script type="module" src="./js/perf.js"></script>
