feat: Hide test buttons for QR simulation to streamline UI

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
       top: 50%;
       transform: translateY(-50%);
       z-index: 20;
-      display: flex;
+      display: none; /* Hidden - can be enabled for testing */
       flex-direction: column;
       gap: 8px;
       background: rgba(0, 0, 0, 0.7);
