Add QR detection overlays and update logic for displaying results

--- a/index.html
+++ b/index.html
@@ -253,6 +253,15 @@
     </div>
   </div>
 
+  <!-- QR Detection Overlays -->
+  <div id="qr-detection-overlay" class="qr-detection-overlay">
+    <div class="qr-status">🔍 Scanning QR Code...</div>
+    <div class="qr-content" id="qr-content-display"></div>
+    <div class="qr-result" id="qr-result-display"></div>
+  </div>
+  
+  <div id="qr-frame-overlay" class="qr-frame-overlay"></div>
+
   <!-- html5-qrcode local -->
   <script src="./html5-qrcode.min.js"></script>
   
