--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
       <div id="detected-qr" class="detected-qr-text">
         Ready to scan QR codes...
       </div>
+      
+      <!-- Debug scanner status -->
+      <div id="scanner-debug" style="
+        position: fixed;
+        bottom: 20px;
+        left: 20px;
+        background: rgba(0,0,0,0.8);
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        font-size: 12px;
+        z-index: 1002;
+        max-width: 300px;
+        word-wrap: break-word;
+      ">
+        Scanner status: Initializing...
+      </div>
     </div>
     
     <!-- Progress Indicators - EN LA PARTE INFERIOR como en Figma -->
