Add generated QR test case and enhance debug logging for QR detection

--- a/debug-qr.html
+++ b/debug-qr.html
@@ -77,6 +77,14 @@
     </div>
     
     <div class="qr-test">
+        <h3>🧪 QR GENERADO (test-qr-generated.png) - PRUEBA SEGUNDO</h3>
+        <img src="test-qr-generated.png" class="qr-display" alt="Generated Test QR" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+        <p style="display:none; color:red;">⚠️ No se pudo cargar el QR generado</p>
+        <p><strong>QR generado con URL: https://qrfy.io/p/U4QhGHiBbA</strong></p>
+        <p>Si este funciona pero los SVG no, el problema es con los SVG específicos.</p>
+    </div>
+    
+    <div class="qr-test">
         <h3>🔴 PROBLEMA: AvaSure2.svg</h3>
         <img src="qrs/official/AvaSure2.svg" class="qr-display" alt="AvaSure2 SVG">
         <p><strong>Este es el QR problemático.</strong> Observa si se detecta algo.</p>
