Enhance QR debug instructions and add manual URL testing feature; integrate native QR detection support

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
   <script type="module" src="./js/data.js"></script>
   <script type="module" src="./js/perf.js"></script>
   <script type="module" src="./js/camera.js"></script>
+  <script src="./js/native-qr.js"></script>
   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
