Enhance UI controls: add 'Complete' button to top bar and update links for selfie filter and LinkedIn group

--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
 
   <div class="ui-overlay">
     <div class="top-bar safe-area-top">
-      <!-- Botón de reset movido a posición fija arriba a la derecha -->
+      <!-- Botones de control arriba a la derecha -->
       <button id="reset-pieces-btn" class="reset-btn">🔄 Reset</button>
+      <button id="complete-form-btn" class="reset-btn" style="margin-left: 0.5rem; background: #35d3d3;">🏆 Complete</button>
     </div>
         <div class="bottom-panel safe-area-bottom">
       <!-- Hint Display - Centrado -->
@@ -161,8 +162,8 @@
       
       <!-- Links above the form -->
       <div style="margin-bottom: 1.5rem; text-align: center;">
-        <p style="margin-bottom: 0.5rem;"><a id="selfie-link" href="#" target="_blank" style="color:#35d3d3; font-weight:600; text-decoration:underline;">🎯 Open Vicky Selfie Filter</a></p>
-        <p style="margin-bottom: 0;"><a id="linkedin-link" href="#" target="_blank" style="color:#35d3d3; font-weight:600; text-decoration:underline;">📱 Join LinkedIn Group</a></p>
+        <p style="margin-bottom: 0.5rem;"><a id="selfie-link" href="filter/index.html" target="_blank" style="color:#35d3d3; font-weight:600; text-decoration:underline;">🎯 Open Vicky Selfie Filter</a></p>
+        <p style="margin-bottom: 0;"><a id="linkedin-link" href="https://www.linkedin.com/groups/13183166/" target="_blank" style="color:#35d3d3; font-weight:600; text-decoration:underline;">📱 Join LinkedIn Group</a></p>
       </div>
       
       <!-- Embedded Google Form -->
